platform/development/dev-apps/istio-demo/namespace-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    istio-injection: enabled
    pod-security.kubernetes.io/enforce: restricted
